# starkify

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  cabal.project  default.lock.toml  default.nix  docker.nix  hie.yaml  miden_cargolock.patch  shell.nix  starkify.cabal  test.sh  test_wasm.sh  wasm-checker.cabal
app/: Commands.hs  Count.hs  MASM.hs  Main.hs  Options.hs  Validation.hs  W2M.hs
manual_test/: import.wat  import.wat.inputs
nix/: README.md  default.lock.toml  default.nix  docker.nix  generate_miden_lock.nix
src/: Callgraph.hs  Continuations.hs  Eval.hs  MASM.hs  Tools.hs  Validation.hs  W2M.hs  WASI.hs
src/MASM/: Callgraph.hs  Interpreter.hs  Miden.hs  Types.hs
src/W2M/: Common.hs  Stack.hs
src/WASM/: WasmTime.hs
testfiles/: align.wat  bitwise.c  bitwise.c.out  block.wat  branch.c  branch_to_loop.wat  break.wat  callgraph.wat  cmp.c  cmp64.c  cmpsigned.wat  div.wat  div64s.wat  double.c  drop.wat  eq.c  eq64.c  extend.wat  global_i32.wat  global_i64.wat  global_i64.wat.out  globals.wat  globals.wat.out  i64_arith.c  i64_arith.c.out  id_int.c  if.c  if.c.out  if.wat  indirect1.wat  indirect1.wat.out  indirect2.wat  indirect3.wat  indirect3.wat.out  loop.wat  loop.wat.out  mod64.wat  mod64.wat.out  nested_blocks.wat  nested_blocks.wat.out  (+32 more)
tests/: Arith.hs  Properties.hs  TestFiles.hs
tests/Properties/: Arith.hs  Cmp.hs  Common.hs  Memory.hs
