cabal-version:      2.4
name:               starkify
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- author:
maintainer:         alpmestan@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Eval,
    MASM,
    MASM.Interpreter,
    MASM.Miden,
    Validation,
    W2M,
    W2M.Stack,
    Count,
    Tools,
    WASI
  hs-source-dirs:     src
  build-depends:      base >=4.13 && <5,
                      bytestring,
                      containers,
                      filepath,
                      mtl,
                      process,
                      temporary,
                      text,
                      vector,
                      wasm,
                      pretty-simple,
                      dlist,
                      monad-validate
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields

executable starkify
    main-is:          Main.hs
    other-modules:    Commands, Options
    build-depends:    aeson,
                      base >=4.13 && <5,
                      bytestring,
                      containers,
                      directory,
                      filepath,
                      mtl,
                      optparse-applicative,
                      process,
                      starkify,
                      text,
                      temporary,
                      vector,
                      wasm,
                      pretty-simple,
                      dlist,
                      monad-validate
    hs-source-dirs:   app
    ghc-options:      -Wall
    default-language: Haskell2010
    default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields

test-suite testfiles
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestFiles.hs
  build-depends:       base, bytestring, directory, filepath, hspec, process, starkify, temporary, wasm
  ghc-options:         -main-is TestFiles -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields

test-suite arith-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Arith.hs
  other-modules:       TestFiles
  build-depends:       base, hspec, QuickCheck, starkify, temporary, wasm, filepath, directory, process, bytestring
  ghc-options:         -main-is Arith -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
  default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields
