cabal-version:      2.4
name:               wasm-checker
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- author:
maintainer:         alpmestan@gmail.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Eval,
    MASM,
    MASM.Interpreter,
    MASM.Miden,
    Validation,
    W2M,
    Count
  hs-source-dirs:     src
  build-depends:      base >=4.13 && <5,
                      bytestring,
                      containers,
                      filepath,
                      mtl,
                      process,
                      temporary,
                      text,
                      vector,
                      wasm,
                      pretty-simple,
                      dlist,
                      monad-validate
  ghc-options:        -Wall
  default-language:   Haskell2010
  default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields

executable wasm-checker
    main-is:          Main.hs
    build-depends:    base >=4.13 && <5,
                      bytestring,
                      containers,
                      mtl,
                      text,
                      vector,
                      wasm,
                      wasm-checker,
                      pretty-simple,
                      dlist,
                      monad-validate
    hs-source-dirs:   app
    ghc-options:      -Wall
    default-language: Haskell2010
    default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields

test-suite wasm-testfiles
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             TestFiles.hs
  build-depends:       base, bytestring, directory, filepath, hspec, process, temporary, wasm, wasm-checker
  ghc-options:         -main-is TestFiles -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:
        ApplicativeDo,
        LambdaCase,
        TupleSections,
        PartialTypeSignatures,
        ImportQualifiedPost,
        DeriveGeneric,
        FlexibleInstances,
        GeneralizedNewtypeDeriving,
        StandaloneDeriving,
        MultiParamTypeClasses,
        FlexibleContexts,
        TypeFamilies,
        NamedFieldPuns,
        DisambiguateRecordFields
